--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>My M0N3Y!</title>
-    <link rel="stylesheet" href="app.css">
+    <link rel='stylesheet' href='app.css'>
   </head>
-  <body class="skin-blue fixed sidebar-mini">
-    <div id="app"></div>
+  <body class='skin-blue fixed sidebar-mini'>
+    <div id="app" class="wrapper"></div>
     <script src="app.js"></script>
   </body>
 </html>
